crates/alder-parse/src/snapshots/alder_parse__module__tests__docs_web_page_options.snap
---
source: crates/alder-parse/src/module.rs
description: "pub let prerender = true      // build-time render (SSG); default false\npub let ssr = false           // skip server render for this subtree; default true\npub let csr = false           // ship no JS for this subtree; default true\npub let trailingSlash = Never // Never | Always | Ignore\n"
---
Module {
    items: [
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 25,
                },
            },
            value: Item {
                attributes: [],
                visibility: Pub(
                    Region {
                        start: Position {
                            line: 1,
                            column: 1,
                        },
                        end: Position {
                            line: 1,
                            column: 4,
                        },
                    },
                ),
                kind: Let(
                    LetDecl {
                        pattern: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 9,
                                },
                                end: Position {
                                    line: 1,
                                    column: 18,
                                },
                            },
                            value: Var(
                                "prerender",
                            ),
                        },
                        annotation: None,
                        value: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 21,
                                },
                                end: Position {
                                    line: 1,
                                    column: 25,
                                },
                            },
                            value: Bool(
                                true,
                            ),
                        },
                    },
                ),
            },
        },
        Located {
            region: Region {
                start: Position {
                    line: 2,
                    column: 1,
                },
                end: Position {
                    line: 2,
                    column: 20,
                },
            },
            value: Item {
                attributes: [],
                visibility: Pub(
                    Region {
                        start: Position {
                            line: 2,
                            column: 1,
                        },
                        end: Position {
                            line: 2,
                            column: 4,
                        },
                    },
                ),
                kind: Let(
                    LetDecl {
                        pattern: Located {
                            region: Region {
                                start: Position {
                                    line: 2,
                                    column: 9,
                                },
                                end: Position {
                                    line: 2,
                                    column: 12,
                                },
                            },
                            value: Var(
                                "ssr",
                            ),
                        },
                        annotation: None,
                        value: Located {
                            region: Region {
                                start: Position {
                                    line: 2,
                                    column: 15,
                                },
                                end: Position {
                                    line: 2,
                                    column: 20,
                                },
                            },
                            value: Bool(
                                false,
                            ),
                        },
                    },
                ),
            },
        },
        Located {
            region: Region {
                start: Position {
                    line: 3,
                    column: 1,
                },
                end: Position {
                    line: 3,
                    column: 20,
                },
            },
            value: Item {
                attributes: [],
                visibility: Pub(
                    Region {
                        start: Position {
                            line: 3,
                            column: 1,
                        },
                        end: Position {
                            line: 3,
                            column: 4,
                        },
                    },
                ),
                kind: Let(
                    LetDecl {
                        pattern: Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 9,
                                },
                                end: Position {
                                    line: 3,
                                    column: 12,
                                },
                            },
                            value: Var(
                                "csr",
                            ),
                        },
                        annotation: None,
                        value: Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 15,
                                },
                                end: Position {
                                    line: 3,
                                    column: 20,
                                },
                            },
                            value: Bool(
                                false,
                            ),
                        },
                    },
                ),
            },
        },
        Located {
            region: Region {
                start: Position {
                    line: 4,
                    column: 1,
                },
                end: Position {
                    line: 4,
                    column: 30,
                },
            },
            value: Item {
                attributes: [],
                visibility: Pub(
                    Region {
                        start: Position {
                            line: 4,
                            column: 1,
                        },
                        end: Position {
                            line: 4,
                            column: 4,
                        },
                    },
                ),
                kind: Let(
                    LetDecl {
                        pattern: Located {
                            region: Region {
                                start: Position {
                                    line: 4,
                                    column: 9,
                                },
                                end: Position {
                                    line: 4,
                                    column: 22,
                                },
                            },
                            value: Var(
                                "trailingSlash",
                            ),
                        },
                        annotation: None,
                        value: Located {
                            region: Region {
                                start: Position {
                                    line: 4,
                                    column: 25,
                                },
                                end: Position {
                                    line: 4,
                                    column: 30,
                                },
                            },
                            value: Path(
                                Path {
                                    segments: [
                                        Located {
                                            region: Region {
                                                start: Position {
                                                    line: 4,
                                                    column: 25,
                                                },
                                                end: Position {
                                                    line: 4,
                                                    column: 30,
                                                },
                                            },
                                            value: "Never",
                                        },
                                    ],
                                },
                            ),
                        },
                    },
                ),
            },
        },
    ],
    comments: [
        Comment {
            region: Region {
                start: Position {
                    line: 1,
                    column: 31,
                },
                end: Position {
                    line: 1,
                    column: 72,
                },
            },
            text: "// build-time render (SSG); default false",
            kind: Line,
        },
        Comment {
            region: Region {
                start: Position {
                    line: 2,
                    column: 31,
                },
                end: Position {
                    line: 2,
                    column: 83,
                },
            },
            text: "// skip server render for this subtree; default true",
            kind: Line,
        },
        Comment {
            region: Region {
                start: Position {
                    line: 3,
                    column: 31,
                },
                end: Position {
                    line: 3,
                    column: 75,
                },
            },
            text: "// ship no JS for this subtree; default true",
            kind: Line,
        },
        Comment {
            region: Region {
                start: Position {
                    line: 4,
                    column: 31,
                },
                end: Position {
                    line: 4,
                    column: 57,
                },
            },
            text: "// Never | Always | Ignore",
            kind: Line,
        },
    ],
}
